Correct K.Perceptron calculation for yhat

--- a/exploratory_notebook.ipynb
+++ b/exploratory_notebook.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -173,163 +175,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utilities import preprocessing, train_test_split,y_encode,data_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.loadtxt(\"zipcombo.dat\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will be a one vs all scenario."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[209.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# first class is zero\n",
-    "\n",
-    "# matrix to hold predictions\n",
-    "\n",
-    "\n",
-    "X,y = data_split(data,y_col=0)\n",
-    "X_train,X_test,y_train,y_test = train_test_split(X,y)\n",
-    "\n",
-    "predictions = np.zeros((X_test.shape[0],10))\n",
-    "\n",
-    "\n",
-    "y_train_i = y_encode(y_train,0)\n",
-    "\n",
-    "P = Perceptron() # quadratic kernel\n",
-    "P.train(X_train,y_train_i)\n",
-    "print(P.M)\n",
-    "predictions[:,0] = P.predict_proba(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1  1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      "0\n",
-      "[97.]\n",
-      "[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1]\n",
-      "0\n",
-      "[244.]\n",
-      "[-1 -1 -1 -1 -1 -1 -1  1 -1 -1]\n",
-      "0\n",
-      "[286.]\n",
-      "[-1 -1 -1  1  1 -1 -1 -1 -1 -1]\n",
-      "0\n",
-      "[301.]\n",
-      "[-1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      "0\n",
-      "[302.]\n",
-      "[-1 -1 -1 -1 -1 -1  1 -1 -1 -1]\n",
-      "0\n",
-      "[187.]\n",
-      "[-1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      "0\n",
-      "[214.]\n",
-      "[-1 -1  1 -1 -1 -1 -1 -1 -1 -1]\n",
-      "0\n",
-      "[314.]\n",
-      "[-1 -1 -1 -1 -1 -1 -1 -1  1 -1]\n",
-      "0\n",
-      "[321.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1,10):\n",
-    "    y_train_i = y_encode(y_train,i)\n",
-    "    print(y_train_i[0:10])\n",
-    "    P = Perceptron() # quadratic kernel\n",
-    "    print(P.M)\n",
-    "    P.train(X_train,y_train_i)\n",
-    "    print(P.M)\n",
-    "    predictions[:,i] = P.predict_proba(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preds = np.argmax(predictions,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3100,)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preds.shape"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
-
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-
        "1.0"
       ]
      },
      "execution_count": 9,
-
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-
     "p.predict(X_z).dot(y_z)/len(y_z)"
    ]
   },
@@ -405,9 +268,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DT's code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from utilities import preprocessing, train_test_split,y_encode,data_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data = np.loadtxt(\"zipcombo.dat\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will be a one vs all scenario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[209.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first class is zero\n",
+    "\n",
+    "# matrix to hold predictions\n",
+    "\n",
+    "\n",
+    "X,y = data_split(data,y_col=0)\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y)\n",
+    "\n",
+    "predictions = np.zeros((X_test.shape[0],10))\n",
+    "\n",
+    "\n",
+    "y_train_i = y_encode(y_train,0)\n",
+    "\n",
+    "P = Perceptron() # quadratic kernel\n",
+    "P.train(X_train,y_train_i)\n",
+    "print(P.M)\n",
+    "predictions[:,0] = P.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      "0\n",
+      "[97.]\n",
+      "[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1]\n",
+      "0\n",
+      "[244.]\n",
+      "[-1 -1 -1 -1 -1 -1 -1  1 -1 -1]\n",
+      "0\n",
+      "[286.]\n",
+      "[-1 -1 -1  1  1 -1 -1 -1 -1 -1]\n",
+      "0\n",
+      "[301.]\n",
+      "[-1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      "0\n",
+      "[302.]\n",
+      "[-1 -1 -1 -1 -1 -1  1 -1 -1 -1]\n",
+      "0\n",
+      "[187.]\n",
+      "[-1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      "0\n",
+      "[214.]\n",
+      "[-1 -1  1 -1 -1 -1 -1 -1 -1 -1]\n",
+      "0\n",
+      "[314.]\n",
+      "[-1 -1 -1 -1 -1 -1 -1 -1  1 -1]\n",
+      "0\n",
+      "[321.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    y_train_i = y_encode(y_train,i)\n",
+    "    print(y_train_i[0:10])\n",
+    "    P = Perceptron() # quadratic kernel\n",
+    "    print(P.M)\n",
+    "    P.train(X_train,y_train_i)\n",
+    "    print(P.M)\n",
+    "    predictions[:,i] = P.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "preds = np.argmax(predictions,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3100,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -428,7 +445,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
