Pushing final edits

--- a/exploratory_notebook.ipynb
+++ b/exploratory_notebook.ipynb
@@ -1122,9 +1122,9 @@
     "for i in range(len(z)-1):\n",
     "    c = confusion.iloc[z[i]:z[i+1]]\n",
     "    if i % 2 == 0:\n",
-    "        c_array = confusion_matrix(y_true = c.iloc[:,1], y_pred=c.iloc[:,0])*1.1\n",
+    "        c_array = confusion_matrix(y_true = c.iloc[:,1], y_pred=c.iloc[:,0])\n",
     "    else: \n",
-    "        c_array = confusion_matrix(y_true = c.iloc[:,1], y_pred=c.iloc[:,0])*1.2\n",
+    "        c_array = confusion_matrix(y_true = c.iloc[:,1], y_pred=c.iloc[:,0])\n",
     "    arrays.append(c_array)"
    ]
   },
